src/scss/style.scss
/* ... */
.checkbox{
	position: relative;
	padding-left: 1.8em;
	cursor: pointer;
	$self: &;
	&__input{
		position: absolute;
		left: 0;
		top: 0;
		width: 0;
		height: 0;
		border: none;
	}
	&__check, &__icon{
		position: absolute;
		@include transition;
	}
	&__check{
		left: 0;
		top: 0.15em;
		width: 0.9em;
		height: 0.9em;
		display: inline-block;
		border: solid 1px $color_primary;
		background: transparent;
		overflow: hidden;
		@include border-radius(0.15em);
	}
	&__icon{
		position: absolute;
		font-size: 0.45em;
		color: #fff;
		left: 50%;
		top: 2.5em;
		opacity: 0;
		@include transform(translateX(-50%));
	}
	&__input:checked{
		& ~ #{$self}__check{
			background: $color_primary;
			#{$self}__icon{
				opacity: 1;
				top: 0.55em;
			}
		}
	}
}

.input{
	$input: &;
	$border-radius: 2em;
	$border: solid 1px $color_gray_light_20;
	$control: #{$input}-control;
	&-control{
		border: $border;
		padding: 0.8em 1.7em;
		font-size: initial;
		color: $color_violet;
		width: 100%;
		@include border-radius($border-radius);
		@include transition;
		@include input-placeholder{
			color: $color_violet;
		}
		&--short{
			padding: 0.6em 1.3em;
		}
	}
	&-block{
		@include display-flex;
		@include flex-direction(row);
		@include justify-content(flex-start);
		@include align-items(center);
		@include flex-wrap(wrap);
		&__prepend{
			border: $border;
			border-right: none;
			padding: 0.73em 1em;
			display: inline-block;
			color: $color_violet;
			@include flex-shrink;
			@include border-radius($border-radius 0 0 $border-radius);
			& ~ #{$control}{
				padding-left: 1em;
				@include border-radius(0 $border-radius $border-radius 0);
			}
		}
		&__label{
			width: 100%;
			font-size: 0.9em;
			padding: 0 1.2em;
			margin-bottom: 0.5em;
			color: $color_gray_dark;
		}
		&--phone #{$control}{
			@include input-placeholder{
				color: $color_gray_light;
			}
		}
		& + &{
			margin-top: 10px;
		}
	}
	&-block--focus &__prepend, &-block--focus &-control, &-control:focus{
		border-color: $color_primary;
	}
}

.city-selector{
	position: relative;
	display: inline-block;
	@include fs-medium;
	&__items{
		opacity: 0;
		pointer-events: none;
		position: absolute;
		min-width: 150px;
		background: #fff;
		padding: 10px 15px;
		left: 0;
		bottom: -15px;
		transition: all 0.4s;
		@include transform(translateY(100%));
		@include border-radius-default;
		@include box-shadow-default;
		&::before{
			position: absolute;
			top: -18px;
			left: 0;
			width: 100%;
			height: 25px;
			content: '';
			display: block;
		}
	}
	&__item{
		display: block;
		padding: 6px 0;
		&--active{
			color: $color_primary;
		}
	}
	&__current{
		position: relative;
		padding-right: 1.4em;
		cursor: pointer;
		&-arrow{
			position: absolute;
			color: $color_gray_dark;
			right: 0;
			top: 50%;
			@include transform(translateY(-50%));
		}
		&, &-arrow{
			@include transition(all 0.4s);
		}
		&:hover, &:hover &-arrow{
			color: $color_primary;
		}
	}
	&:hover &__items{
		opacity: 1;
		pointer-events: auto;
		bottom: -10px;
	}
	&:hover &__current-arrow {
		@include transform(translateY(-50%) rotate(180deg));
	}
}

// TABS
.tabs{
	@include display-flex;
	@include flex-direction(row);
	@include justify-content(space-between);
	@include align-items(flex-start);
}
.tab{
	border: solid 1px $color_primary;
	color: $color_primary;
	cursor: pointer;
	background: transparent;
	padding: 0.95em 1.6em;
	text-transform: uppercase;
	font-weight: bold;
	@include transition;
	@include border-radius(0.2em);
	&--gray{
		color: $color_gray_light_10;
		border-color: $color_gray_light_15;
	}
	&--text-normal{
		text-transform: none;
	}
	&--text-medium{
		font-weight: 500;
	}
	&:hover, &--active{
		background: $color_primary;
		border-color: $color_primary;
		color: #fff;
	}
	&__text{
		font-weight: 400;
		font-size: 0.8em;
	}
}

// MENU
.menu{
	&__item{
		& + &{
			margin-left: 2em;
		}
	}
}

.phones-list{
	@include display-flex;
	@include flex-direction(column);
	&__item{
		& + &{
			margin-top: 5px;
		}
	}
}

.usp{
	&__title{
		color: $color_primary;
		font-size: 3.12rem;
		font-weight: bold;
		margin: 0;
		line-height: 1.1;
	}
	&__content{
		position: relative;
		z-index: 2;
	}
	&__advantages{
		margin-top: 85px;
		.card-advantage{
			min-height: 105px;
		}
	}
	&::before, &__bg{
		z-index: 1;
	}
	&::before, &__bg, &__bg::before, &__bg::after{
		position: absolute;
		background: $color_primary;
	}
	&::before, &__bg::before, &__bg::after{
		width: 2px;
		content: '';
		display: block;
	}
	&::before{
		height: 60px;
		left: 113px;
		top: -85px;
	}
	&__bg{
		height: 330px;
		width: 40px;
		bottom: -118px;
		left: 93px;
		@include border-radius-default;
		&::before, &::after{
			height: 75px;
			left: calc(50% - 1px);
		}
		&::before{
			top: 0;
			@include transform(translateY(-100%));
		}
		&::after{
			bottom: 0;
			@include transform(translateY(100%));
		}
	}
}

.card-advantages, .card-advantage{
	@include display-flex;
}
.card-advantages{
	margin-bottom: -25px;
	@include flex-direction(row);
	@include flex-wrap(wrap);
	@include justify-content(space-between);
}
.card-advantage{
	background: #fff;
	position: relative;
	padding: 1em 2.5em 1em 6em;
	width: 48.7%;
	margin-bottom: 25px;
	@include border-radius-default;
	@include box-sizing;
	@include flex-direction(column);
	@include justify-content(center);
	&__icon-block{
		line-height: 0;
		position: absolute;
		font-size: 2.5em;
		left: 0.5em;
		top: 50%;
		color: $color_primary;
		@include transform(translateY(-50%));
	}
	&__title{
		margin-bottom: 0.1em;
		font-weight: bold;
		@include fs-medium;
	}
	&__text{
		color: $color_gray_dark_27;
		@include fs-small;
	}
}

.quick-order-form{
	&__title{
		margin-top: -5px;
	}
	&__btn{
		margin-top: 35px;
		width: 100%;
		padding-left: 0;
		padding-right: 0;
		@include fs-medium;
	}
}
/* ... */

